--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "eslint-config-hfex": "^1.0.2",
+    "hfex-prettier-config": "^1.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2"
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8"
   },
   "eslintConfig": {
     "root": true,
@@ -34,9 +36,14 @@
       "hfex"
     ]
   },
+  "prettier": "hfex-prettier-config",
   "lint-staged": {
-    "src/**/*.{ts,js,json,vue,jsx,tsx}": [
+    "bin/**/*.{ts,js,json,vue,jsx,tsx},lib/**/*.{ts,js,json,vue,jsx,tsx}": [
       "eslint --fix",
+      "git add"
+    ],
+    "bin/**/*.{js,vue,scss,css,less,json,ts},lib/**/*.{js,vue,scss,css,less,json,ts}": [
+      "prettier --write",
       "git add"
     ]
   }
