feat: 加入vue-package模板创建

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "prettier --write",
       "git add"
     ],
-    "lib/**/*.{js,json}": [
+    "libs/**/*.{js,json}": [
       "eslint --fix",
       "prettier --write",
       "git add"
