--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mfex-project",
   "version": "1.0.0",
-  "description": "创建项目模板",
+  "description": "创建项目模板脚手架",
   "main": "index.js",
   "type": "module",
   "bin": {
