--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "inquirer": "^9.1.4",
     "ora": "^6.1.2"
   },
+  "files": [
+    "bin",
+    "libs",
+    "package.json"
+  ],
   "devDependencies": {
     "eslint": "^8.41.0",
     "eslint-config-hfex": "^1.0.2",
