feat: 新加react-package模板

--- a/libs/data/demo.config.json
+++ b/libs/data/demo.config.json
@@ -22,6 +22,12 @@
                 "value": "vue-node-package",
                 "description": "vue-node-package",
                 "link": "https://gitee.com/Hehanjian/vue-package-template"
+            },
+            {
+                "name": "react-node-package",
+                "value": "react-node-package",
+                "description": "react-node-package",
+                "link": "https://gitee.com/Hehanjian/react-package-template"
             }
         ]
     }
